infra/argocd/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
spec:
  tls:
    - hosts:
        - argocd.labyu.me
      secretName: argocd-secret
  rules:
  - host: argocd.labyu.me
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: https
